[build-system]
requires = ["setuptools >= 69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openquake.vmtk"
dynamic = ["version"]
description = "Vulnerability Toolkit"
readme = """
A repository for modelling and analysing multi-degree-of-freedom systems for response characterisation of global building classes
Copyright (C) 2025 GEM Foundation
"""
license = { text = "AGPL-3.0-only" }

authors = [
    { name = "GEM Foundation", email = "risk@globalquakemodel.org" },
]
maintainers = [
    { name = "GEM Foundation", email = "risk@globalquakemodel.org" },
]

keywords = [
    "risk",
    "seismic",
    "risk seismic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python ",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

requires-python = ">=3.10, <3.14"
dependencies = [
	"seaborn >= 0.13.0",
    "ipykernel >= 4.8.0",
    "ipython >= 6.2.0",
    "jupyter_client >= 5.0.0",
    "notebook >= 5.0.0",
    "pyproj >= 3.7.2",
    "scipy > 1.15.3",
    "matplotlib >= 3.10.1",
    "numpy >= 2.2.6",
    "numba >= 0.61.2",
    "pandas >= 2.2.3",
    "statsmodels >= 0.14.4",
    "pydantic >= 2.10.6 ",
]


[project.urls]
Homepage = "https://github.com/GEMScienceTools/vulnerability-toolkit"
Repository = "https://github.com/GEMScienceTools/vulnerability-toolkit"
Documentation = " "

[tool.setuptools.packages.find]
where = ["."]
include = ["openquake*"]

[tool.setuptools.exclude-package-data]
"*" = [
	"tests",
	"tests.*"
]

[tool.setuptools.dynamic]
version = {attr = "openquake.vmtk.__version__"}
